<resources>
    <string name="app_name">Andtut</string>
    <string name="drag_drop">drag and drop</string>
    <string name="start_note">Start Notification</string>
    <string name="cancel_note">Cancel Notification</string>
    <string name="update_note">Update Notification</string>
    <string name="phone_label">Phone</string>
    <string name="sms_label">SMS</string>
    <string name="send_sms_label">Send SMS</string>
    <string name="make_call">Make Call</string>
    <string name="Recording">Recording</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="audio">Audio</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Silent">Silent</string>
    <string name="Ring">Ring</string>
    <string name="Mode">Mode</string>
    <string name="Status">Status</string>
    <string name="auto_complete">Auto Complete</string>
    <string name="multi_auto_complete">Multi Auto Complete</string>
    <string name="on">On</string>
    <string name="Visible">Visible</string>
    <string name="List">List</string>
    <string name="off">Off</string>
    <string name="Capture">Capture</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="gray">Gray</string>
    <string name="bright">Bright</string>
    <string name="dark">dark</string>
    <string name="save">save</string>
    <string name="read">read</string>
    <string name="tap">tap</string>
    <string name="inital_Time">inital time</string>
    <string name="xaxis">X-Axis</string>
    <string name="yaxis">Y-Axis</string>
    <string name="MoveX">Move X</string>
    <string name="MoveY">Move Y</string>
    <string name="perform">Touch here</string>
    <string name="url">URL here</string>
    <string name="click">Download</string>
    <string name="google">URL</string>
    <string name="notification">notification</string>
    <string name="title">title</string>
    <string name="heading">heading</string>
    <string name="body">body</string>
    <string name="create">create</string>
    <string name="link">link</string>
    <string name="fetch">fetch</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="street">street</string>
    <string name="country">country</string>

    <string name="contactAddress">SIP Address to contact</string>
    <string name="talk">Talk</string>

    <string name="suggest">suggest</string>
    <string name="pre">Suggestions</string>

    <string name="test1">This is activity 1</string>
    <string name="test2">This is activity 2</string>
    <string name="go1">Go to activity 1</string>
    <string name="go2">Go to activity 2</string>

    <string name="text1">Text to Speech</string>
    <string name="write">Write Text</string>

    <string name="hello_world">URL:</string>
    <string name="browse">Browse</string>
    <string name="website">website</string>

    <string-array name="list_of_countries">
        <item>USA</item>
        <item>Uk</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>France</item>
        <item>Italy</item>
        <item>China</item>
        <item>Japan</item>
        <item>Spain</item>
    </string-array>
</resources>
