<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_audio_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.andtut.audiomanager.AudioManagerActivity">

        <TextView android:id="@+id/audio_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/audio"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/vibrate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/silent_button"
            android:layout_alignBottom="@+id/silent_button"
            android:layout_alignRight="@+id/audio_text_view"
            android:text="@string/Vibrate" />
        <Button
            android:id="@+id/silent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="144dp"
            android:layout_marginLeft="40dp"
            android:layout_toLeftOf="@+id/vibrate_button"
            android:text="@string/Silent" />
        <Button
            android:id="@+id/ring_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mode_button"
            android:layout_alignBottom="@+id/mode_button"
            android:layout_toRightOf="@+id/mode_button"
            android:text="@string/Ring" />
        <Button
            android:id="@+id/mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/vibrate_button"
            android:layout_alignLeft="@+id/silent_button"
            android:layout_marginBottom="15dp"
            android:text="@string/Mode" />
        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audio_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/Status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
</layout>
