<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label" />
        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_label" />
        <EditText
            android:id="@+id/editTextSMS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
        <Button android:id="@+id/btnSendSMS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_sms_label"/>
    </LinearLayout>
</layout>
