<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.andtut.bluetooth.BluetoothActivity">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                <Button
                    android:id="@+id/on_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="on"
                    android:text="@string/on" />
                <Button
                    android:id="@+id/visible_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="visible"
                    android:text="@string/Visible" />
                <Button
                    android:id="@+id/list_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="list"
                    android:text="@string/List" />
                <Button
                    android:id="@+id/off_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="off"
                    android:text="@string/off" />
                <ListView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible" >
                </ListView>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>
