<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="app.andtut.notifications.PushNotificationActivity" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_push_notification"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.andtut.notifications.PushNotificationActivity">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="86dp"
            android:onClick="@{() -> activity.push()}"
            android:text="@string/notification" />
        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="53dp"
            android:ems="10" />
        <EditText
            android:id="@+id/heading_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title_edit_text"
            android:layout_below="@+id/title_edit_text"
            android:layout_marginTop="28dp"
            android:ems="10" />
        <EditText
            android:id="@+id/body_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/heading_edit_text"
            android:layout_below="@+id/heading_edit_text"
            android:layout_marginTop="23dp"
            android:ems="10" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/title_edit_text"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@+id/title_edit_text"
            android:text="@string/title" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/body_edit_text"
            android:layout_alignRight="@+id/textView1"
            android:text="@string/heading" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/body_edit_text"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/body" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/create"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
</layout>
