<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="eventTouch"
            type="app.andtut.multitouch.EventTouch" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_multi_touch"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.andtut.multitouch.MultiTouchActivity">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:text="@{String.valueOf(eventTouch.lastYAxis)}"
            android:ems="10" />
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:text="@{String.valueOf(eventTouch.lastXAxis)}"
            android:ems="10" >
            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText3"
            android:layout_below="@+id/editText3"
            android:text="@{String.valueOf(eventTouch.xAxis)}"
            android:ems="10" >
        </EditText>
        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:text="@{String.valueOf(eventTouch.yAxis)}"
            android:ems="10" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText3"
            android:layout_alignParentLeft="true"
            android:text="@string/xaxis"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText3"
            android:layout_alignRight="@+id/textView2"
            android:text="@string/yaxis"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText4"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/MoveX"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignRight="@+id/textView4"
            android:text="@string/MoveY"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="109dp"
            android:text="@string/perform"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
</layout>
