<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="app.andtut.networkconnection.NetworkConnectionActivity" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_network_connection"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.andtut.networkconnection.NetworkConnectionActivity">

        <TextView
            android:id="@+id/url_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/url_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/url_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:ems="10" />
        <Button
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/url_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="69dp"
            android:onClick="@{() -> activity.download()}"
            android:text="@string/click" />
        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/url_edit_text"
            android:layout_below="@+id/download_button"
            android:layout_marginTop="56dp"
            android:text="@string/google"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</layout>
